# substack

./: .env.example  .envrc.template  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  mise.toml  package.json  pyproject.toml  turbo.json
alembic/versions/: 001_initial.py
app/: config.py  database.py  main.py  models.py  scheduler.py
app/api/routers/: digests.py  jobs.py  watchlist.py
app/api/schemas/: digests.py
app/api/services/: price_service.py
app/client/: __init__.py  substack.py
app/core/: __init__.py  digest.py  watchlist.py
app/services/: __init__.py  finance.py
apps/api/: Dockerfile  alembic.ini  pyproject.toml  ruff.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial.py  002_add_updated_at_and_category.py  003_features.py  004_stock_research.py  005_stock_overview.py  006_balance_sheet_ai.py
apps/api/app/: cli.py  config.py  database.py  main.py  models.py  scheduler.py
apps/api/app/api/schemas/: jobs.py  watchlist.py
apps/api/app/api/services/: digest_service.py  watchlist_service.py
apps/api/app/clients/: substack.py
apps/api/app/routers/: digests.py  jobs.py  research.py  stock.py  watchlist.py
apps/api/app/schemas/: digests.py  jobs.py  research.py  stock.py  watchlist.py
apps/api/app/services/: ai_analysis.py  digest.py  extractor.py  finance.py  progress.py  research.py  stock.py  summarizer.py  watchlist.py
apps/api/tests/: conftest.py  test_digests.py  test_jobs.py  test_summarizer.py  test_watchlist.py
apps/web/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/api/: client.ts  digests.ts  jobs.ts  research.ts  stock.ts  watchlist.ts
apps/web/src/components/: Layout.tsx  (+2 more)
src/substack_digest/: __init__.py  __main__.py  cli.py  config.py
src/substack_digest/client/: __init__.py  substack.py
src/substack_digest/core/: __init__.py  digest.py
src/substack_digest/services/: __init__.py  email.py
src/substack_digest/templates/: digest_email.html
web/src/api/: digests.ts  jobs.ts  watchlist.ts
web/src/components/: ArticleCard.tsx  DigestArchive.tsx  TickerDrawer.tsx
web/src/lib/: format.ts
web/src/pages/: DigestPage.tsx  SettingsPage.tsx
web/src/types/: index.ts
(+44 files in other folders)
