[project]
name = "substack-digest"
version = "0.2.0"
description = "Daily AI-powered digest of your Substack subscriptions"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "google-genai>=1.0",
    "pydantic-settings>=2.0",
    "beautifulsoup4>=4.12",
    "yfinance>=1.2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "apscheduler>=3.10,<4",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.8",
]

[project.scripts]
substack-digest = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
